@@ -7,6 +7,8 @@ Changelog
   figure and dataset view, they now show up from the generic viewlets in place
   with other metadata
   [ichim-david refs #119540]
+* Change: added upgrade script to cleanup geographicCoverage field values
+  [alecghica refs #117948]
 
 15.0 - (2020-06-19)
 ---------------------------
